# aerostore

./: Cargo.toml  LICENSE  README.md
aerostore_core/: Cargo.toml
aerostore_core/benches/: hyperfeed_crucible.rs  procarray_snapshot.rs  shm_skiplist_adversarial.rs  shm_skiplist_seek_bounds.rs  tmpfs_warm_restart.rs  wal_delta_throughput.rs
aerostore_core/src/: arena.rs  bootloader.rs  execution.rs  filters.rs  index.rs  ingest.rs  lib.rs  mvcc.rs  occ.rs  occ_partitioned.rs  planner.rs  planner_cardinality.rs  procarray.rs  query.rs  rbo_planner.rs  recovery.rs  recovery_delta.rs  retry.rs  shm.rs  shm_index.rs  shm_skiplist.rs  shm_tmpfs.rs  stapi_parser.rs  txn.rs  vacuum.rs  wal.rs  wal_delta.rs  wal_logical.rs  wal_ring.rs  wal_writer.rs  watch.rs
aerostore_core/tests/: index_relink_gc_consistency.rs  ingest_watch_ttl.rs  logical_recovery.rs  mvcc_tokio_concurrency.rs  occ_checkpoint_benchmark.rs  occ_partitioned_lock_striping_benchmark.rs  occ_recycle_invariants_single_thread.rs  occ_row_lock_semantics.rs  occ_savepoint_reclaim.rs  occ_write_skew.rs  planner_cardinality.rs  procarray_concurrency.rs  query_index_benchmark.rs  rbo_planner_routing.rs  shm_benchmark.rs  shm_fork.rs  shm_index_benchmark.rs  shm_index_bounds.rs  shm_index_churn.rs  shm_index_contention.rs  shm_index_fork.rs  shm_index_gc_horizon.rs  shm_recycle_visibility.rs  shm_shared_memory.rs  speedtable_arena_perf.rs  test_concurrency.rs  tmpfs_warm_restart_chaos.rs  tmpfs_warm_restart_expansions.rs  vacuum_free_list_invariants.rs  vacuum_leader_handoff.rs  vacuum_recycle_ab_benchmark.rs  vacuum_recycle_stress.rs  wal_crash_recovery.rs  wal_delta_codec.rs  wal_delta_recovery_pk_map.rs  wal_ring_benchmark.rs  wal_writer_lifecycle.rs
aerostore_macros/: Cargo.toml
aerostore_macros/src/: lib.rs
aerostore_macros/tests/: ui.rs
aerostore_macros/tests/ui/: compile_fail_reserved_null_bitmask.rs  compile_fail_reserved_null_bitmask.stderr  compile_fail_reserved_nullmask_legacy.rs  compile_fail_reserved_nullmask_legacy.stderr  compile_fail_reserved_xmax.rs  compile_fail_reserved_xmax.stderr  compile_fail_reserved_xmin.rs  compile_fail_reserved_xmin.stderr  compile_fail_too_many_fields.rs  compile_fail_too_many_fields.stderr  compile_fail_tuple_struct.rs  compile_fail_tuple_struct.stderr  compile_pass_basic.rs  compile_pass_generics.rs
aerostore_tcl/: Cargo.toml  test.tcl
aerostore_tcl/src/: lib.rs  vacuum_index_cleanup_tests.rs
aerostore_tcl/tests/: config_checkpoint_integration.rs  search_stapi_bridge.rs
docs/: crucible_10x_attempt_log_2026-03-03.md  crucible_allocator_telemetry_2026-03-03.md  nightly_perf.md
docs/bench_data/: aerostore_alloc_profile_2g_120s_2026-03-03.csv
