[package]
name = "aerostore_core"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = { workspace = true }
crossbeam-skiplist = { workspace = true }
aerostore_macros = { path = "../aerostore_macros" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.44", features = ["fs", "io-util", "sync", "rt", "rt-multi-thread", "time", "macros"] }
memchr = "2.7"
itoa = "1.0"
ryu = "1.0"

[dev-dependencies]
aerostore_macros = { path = "../aerostore_macros" }
loom = "0.7"
