[package]
name = "aerostore_core"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = { workspace = true }
crossbeam-skiplist = { workspace = true }
aerostore_macros = { path = "../aerostore_macros" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.44", features = ["fs", "io-util", "sync", "rt", "rt-multi-thread", "time", "macros"] }
memchr = "2.7"
itoa = "1.0"
ryu = "1.0"
libc = "0.2"
rkyv = { version = "0.7", features = ["validation"] }
nom = "7.1"
rustix = { version = "0.38", features = ["runtime", "process", "fs"] }

[dev-dependencies]
aerostore_macros = { path = "../aerostore_macros" }
criterion = "0.5"
loom = "0.7"
tempfile = "3.15"

[[bench]]
name = "procarray_snapshot"
harness = false

[[bench]]
name = "shm_skiplist_adversarial"
harness = false

[[bench]]
name = "wal_delta_throughput"
harness = false

[[bench]]
name = "tmpfs_warm_restart"
harness = false
