[package]
name = "aerostore_tcl"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
aerostore_core = { path = "../aerostore_core" }
clib = "0.2.4"
crossbeam = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tcl = "=0.1.8"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "time", "fs", "io-util"] }
